--- a/projects/exam_2/views/res_config.xml
+++ b/projects/exam_2/views/res_config.xml
@@ -1,32 +1,32 @@
 <odoo>
     <data>
-        <record id="res_config_settings_exam_form_inherit" model="ir.ui.view">
-            <field name="name">res config settings exam form inherit</field>
-            <field name="model">res.config.settings</field>
-            <field name="inherit_id" ref="base.res_config_settings_view_form"/>
-            <field name="arch" type="xml">
-                <xpath expr="//div[hasclass('settings')]" position="inside">
-                    <div class="app_settings_block" data-string="Exam" string="exam" data-key="exam_2">
-                        <h2>Exam block</h2>
-                        <div class="col-12 col-lg-6 o_setting_box">
-                            <div class="o_setting_left_pane">
-                                <span class="o_form_label">Add Question Paper 1</span>
-                                <field name="group_question_paper_id"/>
-                            </div>
-                            <div class="o_setting_left_pane">
-                                <span class="o_form_label">Add New Question Paper </span>
-                                <field name="question_paper_1"/>
-                            </div>
-                            <div class="o_setting_left_pane">
-                                <group>
-                                    <field name="orders_ids" domain="[('date_order','&gt;=',time.strftime('%%Y-04-%%d'))]"/>
-                                </group>
-                            </div>
-                        </div>
-                    </div>
-                </xpath>
-            </field>
-        </record>
+<!--        <record id="res_config_settings_exam_form_inherit" model="ir.ui.view">-->
+<!--            <field name="name">res config settings exam form inherit</field>-->
+<!--            <field name="model">res.config.settings</field>-->
+<!--            <field name="inherit_id" ref="base.res_config_settings_view_form"/>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <xpath expr="//div[hasclass('settings')]" position="inside">-->
+<!--                    <div class="app_settings_block" data-string="Exam" string="exam" data-key="exam_2">-->
+<!--                        <h2>Exam block</h2>-->
+<!--                        <div class="col-12 col-lg-6 o_setting_box">-->
+<!--                            <div class="o_setting_left_pane">-->
+<!--                                <span class="o_form_label">Add Question Paper 1</span>-->
+<!--                                <field name="group_question_paper_id"/>-->
+<!--                            </div>-->
+<!--                            <div class="o_setting_left_pane">-->
+<!--                                <span class="o_form_label">Add New Question Paper </span>-->
+<!--                                <field name="question_paper_1"/>-->
+<!--                            </div>-->
+<!--                            <div class="o_setting_left_pane">-->
+<!--                                <group>-->
+<!--                                    <field name="orders_ids" domain="[('date_order','&gt;=',time.strftime('%%Y-04-%%d'))]"/>-->
+<!--                                </group>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </xpath>-->
+<!--            </field>-->
+<!--        </record>-->
 
 
 <!--        <record id="exam_my_custom" model="ir.actions.act_window">-->
