promotional discount : added discout to products while creating sale order, discount type fixed and percentage.

--- a/projects/contact_sale/views/contact_email_template.xml
+++ b/projects/contact_sale/views/contact_email_template.xml
@@ -3,7 +3,7 @@
         <record id="contact_sale_email_template" model="mail.template">
             <field name="name">contact sale email template</field>
             <field name="model_id" ref="contact_sale.model_contact_sale"/>
-            <field name="email_from">{{ object.sales_person.email }}</field>
+            <field name="email_from">{{ object.sales_person.login }}</field>
             <field name="email_to">{{ object.contact_id.email }}</field>
             <field name="subject">Contact Sale Details</field>
             <field name="body_html" type="html">
