[ADD]frontend : added boolean field in res.config.settings, added groups in bollean field, added message in website shop page, backend : added sale order lines on change of product and quantity, added fields in sale order lines, calculated sub total, added fields in invoice lines, added fields in sale order report

--- a/projects/credit_limit/views/res_config_settings.xml
+++ b/projects/credit_limit/views/res_config_settings.xml
@@ -35,3 +35,17 @@
         <!--        </record>-->
     </data>
 </odoo>
+
+
+<!--<odoo>-->
+<!--    <record model="ir.ui.view" id="test_hr_id">-->
+<!--        <field name="name">hr employee</field>-->
+<!--        <field name="model">hr.employee</field>-->
+<!--        <field name="inherit_id" ref="hr.view_employee_form"/>-->
+<!--        <field name="arch" type="xml">-->
+<!--            <xpath expr="//field[@name='user_id']" position="attributes">-->
+<!--                <attribute name="options">{'no_quick_create': True, 'no_edit': False, 'no_create': False}</attribute>-->
+<!--            </xpath>-->
+<!--        </field>-->
+<!--    </record>-->
+<!--</odoo>-->
